--- a/TDmake/Makefile
+++ b/TDmake/Makefile
@@ -1,16 +1,16 @@
 all: main
 
 date.o: date.c date.h
-	gcc -c date.c
+	gcc -g -c date.c
 
 person.o: person.c person.h
-	gcc -c person.c
+	gcc -g -c person.c
 
 list.o: list.c list.h
-	gcc -c list.c
+	gcc -g -c list.c
 
 main.o: main.c
-	gcc -c main.c
+	gcc -g -c main.c
 
 main: main.o date.o
 	gcc -o main main.o date.o person.o list.o
